WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210159
Regression(
r259610
) [RBSTarget targetWithPid:] may throw a 'must specify a valid pid' exception
https://bugs.webkit.org/show_bug.cgi?id=210159
Summary
Regression(r259610) [RBSTarget targetWithPid:] may throw a 'must specify a va...
Chris Dumez
Reported
2020-04-07 15:05:35 PDT
[RBSTarget targetWithPid:] may throw a 'must specify a valid pid' exception since
r259610
. There are apparently cases where the PID we are passing the ProcessAssertion is 0 (likely process crash on startup). BKSAssertion used to deal with this silently but RBSAssertion actually throws an exception in this case. To maintain the old behavior, we should do an explicit check to make sure the PID is valid before passing it to RunningBoard.
Attachments
Patch
(2.43 KB, patch)
2020-04-07 15:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-04-07 15:07:03 PDT
Created
attachment 395743
[details]
Patch
EWS
Comment 2
2020-04-08 08:37:59 PDT
Committed
r259717
: <
https://trac.webkit.org/changeset/259717
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395743
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-04-08 08:38:12 PDT
<
rdar://problem/61456395
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug